OK, I really like 23pt Georgia with better leading. But need to address all the areas it then no longer works as a default font. Also, need to check how it will be handled on small viewports…

--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background: $white;
-  font: 16px/23px $helveticaNeue;
+  font: 23px/33px $georgia;
   color: $gray;
   -webkit-font-smoothing: antialiased;
 }
